--- a/admin/templates/privacy_policy.html
+++ b/admin/templates/privacy_policy.html
@@ -16,11 +16,17 @@
         <div class="container py-5">
             <h3 class="mb-4">{{ privacy_policy_label }}</h3>
             <form class="form-horizontal" method="post" id="post" name="post" action="admincenter.php?site=settings_privacy_policy" onsubmit="return chkFormular();">
-            <div class="mb-3">
-                <textarea class="ckeditor" id="editor1" name="message" style="width: 100%;" rows="25">{{ privacy_policy_text }}</textarea>
-            </div>
-            <input type="hidden" name="captcha_hash" value="{{ captcha_hash }}" />
-            <button class="btn btn-warning btn-sm" type="submit" name="submit">{{ update_button_label }}</button>
+                <div class="mb-3 row">
+                    <label class="col-sm-3 control-label">{{ editor_is_editor }}:</label>
+                    <div class="col-sm-8 form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="toggle-editor" name="editor" value="1" {{ editor_checked }}>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <textarea class="{{ editor_checked }}" id="ckeditor" rows="25" name="message" style="width: 100%;">{{ privacy_policy_text }}</textarea>
+                </div>
+                <input type="hidden" name="captcha_hash" value="{{ captcha_hash }}" />
+                <button class="btn btn-warning btn-sm" type="submit" name="submit">{{ update_button_label }}</button>
             </form>
         </div>
     </div>
