--- a/includes/themes/default/templates/static.html
+++ b/includes/themes/default/templates/static.html
@@ -1,14 +1,17 @@
 <!-- static_head -->
+
 <div class="head-boxes">
-<h2 class="head-h2">
-    <span class="head-boxes-title">$title</span>
-</h2>
+    <span class="head-boxes-head">{{ title }}</span>
+    <h2 class="head-h2">
+        <span class="head-boxes-title">{{ title }}</span>
+    </h2>
+    <p class="head-boxes-foot">{{ subtitle }}</p>
 </div>
 <!-- END -->
 <!-- static_content -->
 <div class="card">
     <div class="card-body">
-        $content
+        {{ content }}
 	</div>
 </div>
 <!-- END -->
