--- a/includes/plugins/footer/templates/footer_easy.html
+++ b/includes/plugins/footer/templates/footer_easy.html
@@ -1,20 +1,17 @@
 <!-- footer_easy_content -->
-<footer class="footer">
-	<div class="container text-center" style="margin-top: 10px">
-		<ul class="list-inline text-center">
-			<li class="list-inline-item mx-lg-3 my-lg-0 mx-2 my-2"> {{ copyright_link1 }} </li>
-			<li class="list-inline-item mx-lg-3 my-lg-0 mx-2 my-2"> {{ copyright_link2 }} </li>
-			<li class="list-inline-item mx-lg-3 my-lg-0 mx-2 my-2"> {{ copyright_link3 }} </li>
-			<li class="list-inline-item mx-lg-3 my-lg-0 mx-2 my-2"> {{ copyright_link4 }} </li>
-			<li class="list-inline-item mx-lg-3 my-lg-0 mx-2 my-2"> {{ copyright_link5 }} </li>
-		</ul>
-		<div class="row">
-			<div class="col">
-				All content copyright {{ myclanname }} &copy; {{ date }} | {{ since }}.<br>
-				All rights reserved.
-			</div>
-		</div>
-	</div>
+<footer class="footer border-top py-4 bg-dark text-white">
+    <div class="container text-center">
+        <ul class="list-inline mb-3">
+            {{ copyright_link1 }}
+            {{ copyright_link2 }}
+            {{ copyright_link3 }}
+            {{ copyright_link4 }}
+            {{ copyright_link5 }}
+        </ul>
+        <p class="mb-0 small">
+            &copy; {{ date }} {{ myclanname }} &middot; Since {{ since }} &middot; All rights reserved.
+        </p>
+    </div>
 </footer>
 <!-- END -->
 
