--- a/includes/themes/default/templates/navigation.html
+++ b/includes/themes/default/templates/navigation.html
@@ -3,15 +3,16 @@
 <!-- END -->
 
 <!-- navigation_dd_head -->
-<li class="dropdown"><a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ name }} <i class="bi bi-chevron-down"></i></a>
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ name }}&nbsp;</a>
 <!-- END -->
 
 <!-- navigation_sub_open -->
-    <ul>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="servicesDropdown">
 <!-- END -->
 
 <!-- navigation_sub_nav -->
-    <li><a href="{{ url }}">{{ name }}</a></li>
+    <li><a class="dropdown-item" href="{{ url }}">{{ name }}</a></li>
 <!-- END -->
 
 <!-- navigation_sub_close -->
@@ -30,14 +31,14 @@
     {{ newmessages }}
 </li>
 <li class="dropdown">{{ icon }}</li>
-<li class="dropdown">
-    <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        <img class="avatar_small" style="height: 21px;width: 28px;margin-left: -5px;" src="../images/avatars/{{ l_avatar }}" alt="{{ nickname }}" title="{{ nickname }}" data-toggle="tooltip" data-html="true" data-bs-placement="right" data-bs-original-title="{{ nickname }}"/>&nbsp;{{ my_account }} <i class="bi bi-chevron-down"></i>
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">&nbsp;
+        <img class="avatar_small" style="height: 21px;width: 28px;margin-left: -5px;" src="../images/avatars/{{ l_avatar }}" alt="{{ nickname }}" title="{{ nickname }}" data-toggle="tooltip" data-html="true" data-bs-placement="right" data-bs-original-title="{{ nickname }}"/>&nbsp;{{ my_account }}
     </a>
-    <ul style="margin-top: 0px;">
-        <li><a class="dropdown-item" href="index.php?site=profile&userID={{ userID }}">{{ to_profil }}</a></li>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="servicesDropdown" style="margin-top: 0px;">
+        <li><a class="dropdown-item" href="index.php?site=profile&userID={{ userID }}">&nbsp;{{ to_profil }}</a></li>
         {{ dashboard }}
-        <li><a class="dropdown-item" href="index.php?site=logout">{{ lang_log_off }}</a></li>
+        <li><a class="dropdown-item" href="index.php?site=logout">&nbsp;{{ lang_log_off }}</a></li>
     </ul>
 </li>
 <!-- END -->
@@ -58,8 +59,8 @@
 <!-- navigation_languages -->                
 <!-- Icon dropdown -->
 <li class="nav-item dropdown">
-    <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-expanded="false">{{ flag }}&nbsp;<i class="bi bi-chevron-down"></i></a>
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="margin-top: 2px;">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false">&nbsp;{{ flag }}&nbsp;</a>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="servicesDropdown">
         <li>{{ de_languages_ok }}</li>
         <li><hr class="dropdown-divider" /></li>
         <li>{{ de_languages }}</li>
