--- a/components/css/page.css
+++ b/components/css/page.css
@@ -62,3 +62,8 @@ body, .sticky-footer-wrapper {
 
   box-shadow:0 .46875rem 2.1875rem rgba(90,97,105,0.1),0 .9375rem 1.40625rem rgba(90,97,105,.1),0 .25rem .53125rem rgba(90,97,105,.12),0 .125rem .1875rem rgba(90,97,105,.1);
 }
+
+.bi-color {
+
+    color: rgba(var(--bs-primary-rgb), 1);
+}
