--- a/includes/themes/default/templates/imprint.html
+++ b/includes/themes/default/templates/imprint.html
@@ -11,7 +11,7 @@
 <div class="card">
     <div class="card-body">
         <div class="container py-5">
-            <h3 class="mb-4">{{ company_name }}</h3>
+            <h3 class="mb-4">{{ impressum_hp_name }}</h3>
 
         <p class="mb-2">
             <span class="fw-semibold">{{ impressum_type_label }}:</span>
