--- a/includes/themes/default/templates/profile.html
+++ b/includes/themes/default/templates/profile.html
@@ -12,11 +12,8 @@
 <div class="card">
   <div class="card-body">
 
-<?php if ($isLocked): ?>
-    <div class="alert alert-danger d-flex align-items-center" role="alert">
-        <i class="bi bi-lock-fill me-2"></i> Dieses Profil ist gesperrt.
-    </div>
-<?php endif; ?>
+{{ isLocked }}
+
     <div class="container my-4">
       <div class="row">
         <!-- Sidebar -->
