--- a/admin/css/metisMenu.css
+++ b/admin/css/metisMenu.css
@@ -49,7 +49,8 @@
   color: #f4f4f4;
   background: rgba(255,255,255,0.2);
   border-radius: 0px;
-  border-left: 2px solid rgba(254,130,29,1);
+  /*border-left: 2px solid rgba(254,130,29,1);*/
+  border: 1px solid rgba(254,130,29,1);
 }
 
 
@@ -152,7 +153,7 @@
 /*.sidebar-head .*/
 .link-head {
     color: #ffffff;
-    border-left: 0px solid rgba(255,255,255,0.2);
+    /*border-left: 0px solid rgba(255,255,255,0.2);*/
       background-color: transparent;
       font-size: 20px;
     /*border-left: 4px solid rgba(255,255,255,0.2);
@@ -192,14 +193,18 @@
     color: #f4f4f4;
     background: rgba(255,255,255,0.07);
     border-radius: 0px;
-  border-left: 12px solid rgba(254,130,29,1);
+  /*border-left: 2px solid rgba(254,130,29,1);*/
+  border: 1px solid rgba(254,130,29,1);
+  margin: 2px 0 2px 0;
 }
 
 .sidebar ul li a:focus, .btn.btn-primary.focus {
       color: #ffffff;
       background: rgba(255,255,255,0.2);
     border-radius: 0px;
-  border-left: 4px solid rgba(254,130,29,1);
+  /*border-left: 4px solid rgba(254,130,29,1);*/
+  border: 1px solid rgba(254,130,29,1);
+  margin: 2px 0 2px 0;
 }
 
 .sidebar .nav-second-level li,
