--- a/includes/themes/default/templates/edit_profiles.html
+++ b/includes/themes/default/templates/edit_profiles.html
@@ -63,11 +63,11 @@
   <h5>Einstellungen</h5>
   <div class="form-check mb-2">
     <input class="form-check-input" type="checkbox" id="dark_mode" name="dark_mode" {{ dark_mode_checked }}>
-    <label class="form-check-label" for="dark_mode">Dark Mode aktivieren</label>
+    <label class="form-check-label" for="dark_mode"><s>Dark Mode aktivieren</s></label>
   </div>
   <div class="form-check mb-4">
     <input class="form-check-input" type="checkbox" id="email_notifications" name="email_notifications" {{ email_notifications_checked }}>
-    <label class="form-check-label" for="email_notifications">E-Mail-Benachrichtigungen erhalten</label>
+    <label class="form-check-label" for="email_notifications"><s>E-Mail-Benachrichtigungen erhalten</s></label>
   </div>
 
   <button type="submit" class="btn btn-primary">Speichern</button>
