--- a/components/css/page.css
+++ b/components/css/page.css
@@ -77,6 +77,7 @@ body, .sticky-footer-wrapper {
 background-image: url('/images/login_bg.jpg');
 background-position: center center;
   background-size: cover;
+  min-height: 59.5vh;
 }
 .bg-image {
   background-image: url('/images/login_bg.jpg');
