--- a/includes/plugins/navigation/css/navigation.css
+++ b/includes/plugins/navigation/css/navigation.css
@@ -1,29 +1,45 @@
 /* Container muss als Positionierungs-Kontext dienen */
-.navbar .container {
-  position: relative;
-}
-
-/* Der <a>-Tag um das Logo */
-.logo-link {
-  position: absolute;
-  top: -5px;
-  left: 10px;
-  z-index: 1000;
-  display: block;
-}
-
-/* Das Logo-Bild */
-.logo-link img {
+/* Gesamtgröße der Navbar */
+.navbar {
   
-  top: 0px;         /* Bild etwas nach oben verschieben */
-  left: 10px;        /* innerhalb des Containers am linken Rand */
-  max-height: 50px;
+  min-height: 80px;
+  
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+/* Container soll sich an Höhe anpassen */
+.navbar .container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+/* Logo-Link (bleibt links oben korrekt) */
+.logo-link {
+ 
+}
+
+/* Bild innerhalb des Links */
+.logo-link img {
+  max-height: 65px; /* damit bleibt etwas Luft nach oben/unten */
   height: auto;
   display: block;
 }
 
 
 
-.logo-link {
-  /*background: rgba(255, 0, 0, 0.2); /* rote Fläche zur Kontrolle */
+[data-bs-theme="dark"] .dropdown-menu {
+  background-color: #343a40;
+  color: #fff;
+  border: none;
+}
+
+[data-bs-theme="dark"] .dropdown-item {
+  color: #f8f9fa;
+}
+
+[data-bs-theme="dark"] .dropdown-item:hover {
+  background-color: #495057;
+  color: #fff;
 }
