--- a/includes/themes/default/templates/navigation.html
+++ b/includes/themes/default/templates/navigation.html
@@ -62,7 +62,7 @@
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false">
         &nbsp;{flag_ok}&nbsp;
     </a>
-    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="servicesDropdown" style="margin-top: 0px;">
         <li>{languages_ok}</li>
         <li><hr class="dropdown-divider" /></li>
         <li>{languages}</li>        
