--- a/includes/themes/default/templates/register.html
+++ b/includes/themes/default/templates/register.html
@@ -47,19 +47,19 @@
                                     <input type="hidden" name="csrf_token" value="{csrf_token}">
 
                                     <div class="mb-3">
-                                        <label for="username" class="form-label">{username}</label>
+                                        <label for="username" class="form-label">{username_label}</label>
                                         <input type="text" name="username" class="form-control" id="username" required
                                                pattern="[a-zA-Z0-9_-]{3,20}" value="{enter_your_name}">
                                     </div>
 
                                     <div class="mb-3">
-                                        <label for="email" class="form-label">{email_address}</label>
+                                        <label for="email" class="form-label">{email_address_label}</label>
                                         <input type="email" name="email" class="form-control" id="email" required
                                                value="{enter_your_email}">
                                     </div>
 
                                     <div class="mb-3">
-                                        <label for="password" class="form-label">{password}</label>
+                                        <label for="password" class="form-label">{password_label}</label>
                                         <input type="password" name="password" class="form-control" id="password"
                                                value="{enter_password}" required>
                                         <small class="form-text text-muted">{pass_text}</small>
@@ -67,7 +67,7 @@
                                     </div>
 
                                     <div class="mb-3">
-                                        <label for="password_repeat" class="form-label">{password_repeat}</label>
+                                        <label for="password_repeat" class="form-label">{password_repeat_label}</label>
                                         <input type="password" name="password_repeat" class="form-control"
                                                id="password_repeat" value="{enter_password_repeat}" required>
                                     </div>
